--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-login": "^0.1.0",
     "react-native": "0.69.5",
     "react-native-animatable": "^1.3.3",
-    "react-native-datepicker": "^1.7.2"
+    "react-native-datepicker": "^1.7.2",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
